--- a/style.css
+++ b/style.css
@@ -75,7 +75,7 @@ body.dark{
 .indicator .hand {
     position: absolute;
     height: 130px;
-    width: 4px; 
+    width: 3px; 
     bottom: 0;
     transform-origin: bottom;  /* *** */
     border-radius: 25px;
@@ -83,12 +83,12 @@ body.dark{
 }
 .hand.min{
     height: 120px;
-    width: 5px; 
+    width: 4px; 
     background: var(--black-color);
 }
 .hand.hour{
     height: 100px;
-    width: 8px; 
+    width: 7px; 
     background: var(--black-color);
 }
 .mode-switch{
@@ -107,20 +107,32 @@ footer{
     font-weight: 300;
 }
 @media screen and (max-width: 480px) {
-    .clock{ height: 350px; width: 350px; }
+    .clock{ height: 320px; width: 320px; }
     .indicator .hand.hour { 
-        height: 90px; 
+        height: 70px;
+        width: 5px; 
     }
     .indicator .hand.min { 
-        height: 110px; 
+        height: 100px; 
+        width: 3px; 
     }
     .indicator .hand{
-        height: 115px; 
+        height: 105px; 
+        width: 2px; 
     }
     
     .clock label span{
         font-size: 22px;
-        font-weight: 500;
+        font-weight: 400;
     }
-
+    .mode-switch{
+        font-size: 18px;
+    }
+    footer{
+        font-weight: 200;
+    }
+    .container .indicator{
+        height: 7px;
+        width: 7px;
+    }
 }
